--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sevenorcas.johnnyapp">
+    package="com.sevenorcas.field">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name="com.sevenorcas.field.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GraphActivity"
+            android:name="com.sevenorcas.field.graph.GraphActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name="com.sevenorcas.field.result.ResultActivity"
             android:label="@string/app_name">
         </activity>
     </application>
