--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
         <activity android:name="com.sevenorcas.field.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -22,6 +23,10 @@
         </activity>
         <activity
             android:name="com.sevenorcas.field.result.ResultActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name="com.sevenorcas.field.list.ListActivity"
             android:label="@string/app_name">
         </activity>
     </application>
