--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name="com.sevenorcas.field.list.ListActivityX"
+            android:name="com.sevenorcas.field.list.ListActivity"
             android:label="@string/app_name">
         </activity>
     </application>
